--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
-install:
-  - apt-get install pandoc
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y pandoc
 
 script:
   - pandoc *.md
